# wafflehacks-deployment-workshop-2023

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
migrations/versions/: cd9a907e8196_innitial_migration.py
ui/: .env.example  .eslintrc.json  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/api/: authentication.ts  fetcher.ts  index.ts  todos.ts  types.ts
ui/src/components/: Loading.tsx
ui/src/pages/: Login.tsx
ui/src/pages/Authentication/: Authentication.tsx  index.ts
ui/src/pages/Authentication/components/: Form.tsx  Login.tsx  Register.tsx
ui/src/pages/List/: List.tsx
ui/src/pages/List/components/: CreateInput.tsx
ui/src/pages/List/components/Navbar/: Navbar.tsx  index.ts
ui/src/pages/List/components/Navbar/components/: LogoutButton.tsx  UserMenu.tsx
ui/src/pages/List/components/TodoList/: TodoList.tsx  index.ts
ui/src/pages/List/components/TodoList/components/: CheckButton.tsx  DeleteButton.tsx  Item.tsx
wafflodo/: app.py  database.py  login.py
