[tool.poetry]
name = "wafflodo"
version = "0.1.0"
description = ""
authors = ["Alex Krantz <alex@krantz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
alembic = "^1.11.1"
flask-cors = "^3.0.10"
flask-login = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
