[tool.poetry]
name = "wafflodo"
version = "0.1.0"
description = ""
authors = ["Alex Krantz <alex@krantz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "^21.3.0"
flask = "^2.3.2"
flask-cors = "^3.0.10"
flask-login = "^0.6.2"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.3"
gunicorn = "^20.1.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
